# actix-csrf-middleware

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
benches/: csrf_token.rs  hmac_token.rs  http.rs  http_memory_profile.rs  memory_profile.rs  token.rs
examples/double-submit-cookie/: Cargo.toml  README.md
examples/double-submit-cookie/src/: main.rs
examples/login-logout-rotation/: Cargo.toml  README.md
examples/login-logout-rotation/src/: main.rs
examples/rotation-after-auth/: Cargo.toml  README.md
examples/rotation-after-auth/src/: main.rs
examples/synchronizer-token/: Cargo.toml  README.md
examples/synchronizer-token/src/: main.rs
reports/: performance_report_2025_08_14.md
src/: lib.rs
tests/: core_common.rs  csrf_request_ext.rs  debug_sync_test.rs  double_submit_cookie.rs  error_contract.rs  integration.rs  limits_and_skip.rs  property_hmac.rs  security_a01_access_control.rs  security_a02_crypto_failures.rs  security_a03_injection.rs  security_origin.rs  security_owasp_a01_access_control.rs  security_owasp_a02_crypto_failures.rs  security_owasp_a03_injection.rs  synchronizer_token.rs
tests/common/: mod.rs
