[package]
name = "actix-csrf-middleware"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Andrew <zeek@tuta.com>"]
repository = "https://github.com/yoozzeek/actix-csrf-middleware"
keywords = ["security", "csrf", "web", "middleware", "actix-web"]
description = "CSRF protection middleware for Actix Web applications. Supports double submit cookie and synchronizer token patterns (with actix-session) out of the box. Flexible, easy to configure, and includes test coverage for common attacks and edge cases."
documentation = "https://docs.rs/actix-csrf-middleware"
rust-version = "1.85.0"

[lib]
crate-type = ["rlib"]

[features]
session = ["actix-session"]

[dependencies]
actix-web = { version = "4", features = ["compat", "secure-cookies"] }
actix-session = { version = "0.10", optional = true, features = ["cookie-session"] }
actix-utils = "3.0.1"
actix-http = "3.10"
base64 = "0.22.1"
futures-util = "0.3.31"
pin-project-lite = "0.2.16"
rand = "0.9.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4.3"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
log = "0.4.27"

[dev-dependencies]
criterion = "0.5"
actix-rt = "2.10"
actix-multipart = "0.7.2"

[[bench]]
name = "http"
harness = false

[[bench]]
name = "hmac_token"
harness = false

[[bench]]
name = "csrf_token"
harness = false

[[bench]]
name = "http_memory_profile"
harness = false
