[package]
name = "actix-csrf-middleware"
version = "0.6.1"
edition = "2021"
license = "MIT"
authors = ["Andrew <zeek@tuta.com>"]
repository = "https://github.com/yoozzeek/actix-csrf-middleware"
keywords = ["security", "csrf", "web", "middleware", "actix-web"]
description = "CSRF protection middleware for Actix Web applications. Supports double submit cookie and synchronizer token patterns (with actix-session) out of the box. Flexible, easy to configure, and includes test coverage for common attacks and edge cases."
documentation = "https://docs.rs/actix-csrf-middleware"
rust-version = "1.88.0"
exclude = ["examples/**"]

[lib]
crate-type = ["rlib"]

[features]
session = ["actix-session"]

[dependencies]
actix-web = { version = "4", features = ["compat", "secure-cookies"] }
actix-session = { version = "0.11", optional = true, features = ["cookie-session"] }
actix-utils = "3"
actix-http = "3"
base64 = "0.22"
futures-util = "0.3"
pin-project-lite = "0.2"
rand = "0.10"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
subtle = "2.6"
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"
url = "2.5"
zeroize = "1"

[dev-dependencies]
actix-rt = "2"
actix-multipart = "0.7"
proptest = "1"